fix icon social scale on mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8665,7 +8665,6 @@ transition: all 0.25s linear;
 .icon-link_social a > img {
   margin-right: 30px;
   margin-left: 30px;
-  min-width: 60px;
   -webkit-transition: all 0.25s linear;
 -moz-transition: all 0.25s linear;
 transition: all 0.25s linear;
@@ -10443,6 +10442,10 @@ transition: all 0.25s linear;
   .thumbnail > a img {
     height: 211px;
   }
+
+  .icon-link_social a > img {
+    max-width: 120px;
+  }
  }
 @media (max-width: 768px) {
   .btn,
@@ -10523,7 +10526,9 @@ transition: all 0.25s linear;
     font-size: 8px;
     padding-left: 20px;
   }
-
+ .icon-link_social a > img {
+   max-width: 100px;
+ }
   .company-description {
     font-size: 12px;
   }
